--- a/frontend/SurveyNow/package.json
+++ b/frontend/SurveyNow/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "moment": "^2.30.1",
     "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
