--- a/frontend/SurveyNow/package.json
+++ b/frontend/SurveyNow/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
     "moment": "^2.30.1",
     "nodemon": "^3.1.10",
