--- a/frontend/SurveyNow/package.json
+++ b/frontend/SurveyNow/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
+    "file-saver": "^2.0.5",
+    "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
     "nodemon": "^3.1.10",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
